[gd_scene load_steps=11 format=2]

[ext_resource path="res://Tilesets/Map.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/GameMap.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Block.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/UI/UI_9_Slice.png" type="Texture" id=5]
[ext_resource path="res://Scripts/VictoryScreen.gd" type="Script" id=6]
[ext_resource path="res://Sprites/UI/UI_Victory_Image.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/UI_Next.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/UI_Replay.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/UI_Exit.png" type="Texture" id=10]

[node name="Scene" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 128, 72 )
current = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( 65543, 1, 0, 131078, 1, 0, 131079, 2, 0, 131080, 1, 0, 196613, 1, 0, 196617, 1, 0, 262150, 1, 0, 262152, 0, 0, 262153, 1, 0, 327687, 1, 0, 327688, 0, 0, 327689, 1, 0, 393224, 1, 0 )
script = ExtResource( 2 )
block = ExtResource( 3 )
next_scene = "res://Scenes/Main3.tscn"

[node name="Spite" parent="." instance=ExtResource( 4 )]
position = Vector2( 96, 48 )
frame = 1
map_path = NodePath("../TileMap")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
margin_left = 64.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 88.0
texture = ExtResource( 5 )
region_rect = Rect2( -0.0223694, 0.0833244, 32.17, 31.9651 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="NinePatchRect"]
margin_left = 26.0
margin_top = 14.0
margin_right = 102.0
margin_bottom = 38.0
texture = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
margin_left = 36.0
margin_top = 44.0
margin_right = 92.0
margin_bottom = 60.0
alignment = 1

[node name="Next" type="TextureButton" parent="NinePatchRect/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource( 8 )

[node name="Replay" type="TextureButton" parent="NinePatchRect/HBoxContainer"]
visible = false
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
texture_normal = ExtResource( 9 )

[node name="Quit" type="TextureButton" parent="NinePatchRect/HBoxContainer"]
visible = false
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
texture_normal = ExtResource( 10 )
[connection signal="add_block" from="TileMap" to="Spite" method="_on_add_block"]
[connection signal="game_won" from="TileMap" to="Spite" method="_on_game_won"]
[connection signal="game_won" from="TileMap" to="NinePatchRect" method="_on_game_won"]
[connection signal="player_moved" from="Spite" to="TileMap" method="_on_player_moved"]
[connection signal="pressed" from="NinePatchRect/HBoxContainer/Next" to="NinePatchRect" method="_on_Next_pressed"]
